@@ -1350,6 +1350,12 @@ name|DONE_SCAN
 block|,
 comment|/*      * Seek to next key which is given as hint.      */
 name|SEEK_NEXT_USING_HINT
+block|,
+comment|/**      * Include KeyValue and done with column, seek to next.      */
+name|INCLUDE_AND_SEEK_NEXT_COL
+block|,
+comment|/**      * Include KeyValue and done with row, seek to next.      */
+name|INCLUDE_AND_SEEK_NEXT_ROW
 block|,   }
 block|}
 end_class
