@@ -1168,6 +1168,12 @@ block|{
 case|case
 name|INCLUDE
 case|:
+case|case
+name|INCLUDE_AND_SEEK_NEXT_ROW
+case|:
+case|case
+name|INCLUDE_AND_SEEK_NEXT_COL
+case|:
 name|results
 operator|.
 name|add
@@ -1175,6 +1181,75 @@ argument_list|(
 name|copyKv
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|qcode
+operator|==
+name|ScanQueryMatcher
+operator|.
+name|MatchCode
+operator|.
+name|INCLUDE_AND_SEEK_NEXT_ROW
+condition|)
+block|{
+if|if
+condition|(
+operator|!
+name|matcher
+operator|.
+name|moreRowsMayExistAfter
+argument_list|(
+name|kv
+argument_list|)
+condition|)
+block|{
+name|outResult
+operator|.
+name|addAll
+argument_list|(
+name|results
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
+name|reseek
+argument_list|(
+name|matcher
+operator|.
+name|getKeyForNextRow
+argument_list|(
+name|kv
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|qcode
+operator|==
+name|ScanQueryMatcher
+operator|.
+name|MatchCode
+operator|.
+name|INCLUDE_AND_SEEK_NEXT_COL
+condition|)
+block|{
+name|reseek
+argument_list|(
+name|matcher
+operator|.
+name|getKeyForNextColumn
+argument_list|(
+name|kv
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|this
 operator|.
 name|heap
@@ -1182,6 +1257,7 @@ operator|.
 name|next
 argument_list|()
 expr_stmt|;
+block|}
 if|if
 condition|(
 name|limit
