@@ -1298,7 +1298,7 @@ operator|.
 name|flushcache
 argument_list|()
 expr_stmt|;
-comment|// Expected block reads: 2
+comment|// Expected block reads: 1
 name|kvs
 operator|=
 name|getData
@@ -1309,7 +1309,7 @@ literal|"row"
 argument_list|,
 literal|"col1"
 argument_list|,
-literal|2
+literal|1
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1451,7 +1451,7 @@ argument_list|,
 literal|3
 argument_list|)
 expr_stmt|;
-comment|// Expected block reads: 4
+comment|// Expected block reads: 3
 name|kvs
 operator|=
 name|getData
@@ -1467,7 +1467,7 @@ argument_list|(
 literal|"col5"
 argument_list|)
 argument_list|,
-literal|4
+literal|3
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1617,7 +1617,7 @@ operator|.
 name|flushcache
 argument_list|()
 expr_stmt|;
-comment|// Baseline expected blocks read: 3
+comment|// Baseline expected blocks read: 2
 name|kvs
 operator|=
 name|getData
@@ -1633,7 +1633,7 @@ argument_list|(
 literal|"col1"
 argument_list|)
 argument_list|,
-literal|3
+literal|2
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1659,9 +1659,10 @@ argument_list|,
 literal|3
 argument_list|)
 expr_stmt|;
-comment|// Baseline expected blocks read: 5
+comment|// Baseline expected blocks read: 6
 comment|// This increase is a minor glitch due to: HBASE-4466. Once that
-comment|// is fixed this will drop back. The extra access will be a cache hit.
+comment|// is fixed this will drop back. The extra access will be a cache
+comment|// hit.
 name|kvs
 operator|=
 name|getData
@@ -1679,7 +1680,7 @@ argument_list|,
 literal|"col2"
 argument_list|)
 argument_list|,
-literal|5
+literal|6
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1774,7 +1775,7 @@ literal|5
 argument_list|)
 expr_stmt|;
 comment|// Get a column from older file.
-comment|// Baseline expected blocks read: 4
+comment|// Baseline expected blocks read: 3
 name|kvs
 operator|=
 name|getData
@@ -1790,7 +1791,7 @@ argument_list|(
 literal|"col1"
 argument_list|)
 argument_list|,
-literal|4
+literal|3
 argument_list|)
 expr_stmt|;
 name|assertEquals
@@ -1929,8 +1930,7 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
-comment|// File 5: Delete with post data timestamp and insert some older
-comment|// date in new files.
+comment|// File 5: Delete
 name|deleteFamily
 argument_list|(
 name|FAMILY
@@ -1945,6 +1945,8 @@ operator|.
 name|flushcache
 argument_list|()
 expr_stmt|;
+comment|// File 6: some more puts, but with timestamps older than the
+comment|// previous delete.
 name|putData
 argument_list|(
 name|FAMILY
@@ -2015,7 +2017,7 @@ operator|.
 name|length
 argument_list|)
 expr_stmt|;
-comment|// File 6: Put back new data
+comment|// File 7: Put back new data
 name|putData
 argument_list|(
 name|FAMILY
@@ -2054,7 +2056,10 @@ operator|.
 name|flushcache
 argument_list|()
 expr_stmt|;
-comment|// Baseline expected blocks read: 13
+comment|// Baseline expected blocks read: 21
+comment|// This increase is a minor glitch due to: HBASE-4466. Once that
+comment|// is fixed this will drop back. The extra access will be a cache
+comment|// hit. The test case only has 13 blocks altogther!
 name|kvs
 operator|=
 name|getData
@@ -2074,7 +2079,7 @@ argument_list|,
 literal|"col3"
 argument_list|)
 argument_list|,
-literal|13
+literal|21
 argument_list|)
 expr_stmt|;
 name|assertEquals
